pick 0f373ebd1 Migrate ValidationReport to XProcessing.
see: https://github.com/google/dagger/commit/0f373ebd1cfffda14fc02ef4208aa4a88e114c62
date: 14 Feb, 2022